uvccapture (0.5-2) UNRELEASED; urgency=low

  * Adopt package, adding myself as maintainer (Closes: #621963).
  * debian/patches/fix_videodev_include_FTBFS.patch: Move changes
    to upstream source to a proper patch system. 

 -- Andrew Starr-Bochicchio <a.starr.b@gmail.com>  Fri, 29 Jun 2012 12:44:59 -0400

uvccapture (0.5-1.2) unstable; urgency=low

  * Non-maintainer upload.
  * Build-Depends on libjpeg-dev, not libjpeg62-dev. Closes: #644969.

 -- Didier Raboud <odyx@debian.org>  Mon, 21 Nov 2011 10:02:58 +0100

uvccapture (0.5-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * uvccapture.c, v4l2uvc.c: Include linux/videodev2.h.  Closes: #621963.

 -- Bart Martens <bartm@debian.org>  Sun, 02 Oct 2011 22:04:40 +0200

uvccapture (0.5-1) unstable; urgency=low

  * New upstream release, all Debian patches merged

 -- Krzysztof Burghardt <krzysztof@burghardt.pl>  Sun, 03 Aug 2008 22:02:38 +0200

uvccapture (0.4-2) unstable; urgency=low

  * Add patch submited by Arno van Amersfoort to prevent double call to
    close_v4l2() (Closes: #491155)
  * Add patch from Sebastian Holtermann that fixes problems with implicit
    declaration of function ‘difftime’
  * "Standards-Version:" bumped to 3.8.0 (no changes needed)
  * This package is licensed on GPL v2 or above, so it is
    more customary to point to /usr/share/common-licenses/GPL
    and not (only) to GPL-2 (debian/copyright fixed).

 -- Krzysztof Burghardt <krzysztof@burghardt.pl>  Sun, 03 Aug 2008 21:52:54 +0200

uvccapture (0.4-1) unstable; urgency=low

  * Initial release (Closes: #473153)

 -- Krzysztof Burghardt <krzysztof@burghardt.pl>  Fri, 28 Mar 2008 19:13:23 +0100