@@ -2,7 +2,7 @@ Source: uvccapture
 Section: graphics
 Priority: optional
 Maintainer: Andrew Starr-Bochicchio <a.starr.b@gmail.com>
-Build-Depends: debhelper (>= 5), libjpeg-dev
+Build-Depends: debhelper (>= 9), libjpeg-dev
 Standards-Version: 3.8.0
 Homepage: http://linux-uvc.berlios.de/
 
