@@ -3,6 +3,8 @@ uvccapture (0.5-2) UNRELEASED; urgency=low
   * Adopt package, adding myself as maintainer (Closes: #621963).
   * debian/patches/fix_videodev_include_FTBFS.patch: Move changes
     to upstream source to a proper patch system. 
+  * Move to a simplified dh style rules file and debhelper compat
+    version 9, bumping the debhelper build dependency to >= 9.
 
  -- Andrew Starr-Bochicchio <a.starr.b@gmail.com>  Fri, 29 Jun 2012 12:44:59 -0400
 
